--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,7 @@
 .page-item.active .page-link {
   font-weight: 700;
   color: #ffffff;
-  background-color: #007bff;
+  background-color: #139dba;
 }
 
 .page-item.disabled .page-link {
