add filter category by name

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,10 @@ body{
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
 }
+.page-item:first-child .page-link {
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
 .page-item a.page-link:hover {
   background-color: #cccccc;
 }
