--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,3 +69,38 @@ body{
   pointer-events: none;
   cursor: auto;
 }
+
+.scroll {
+  width: 240px;
+  height: 200px;
+  overflow-y: scroll;
+  background-color: #f6f6f6;
+  
+  &::-webkit-scrollbar {
+    background-color: transparent;
+    width: 0px;
+  }
+}
+
+.scroll:hover {
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #111827
+  }
+  &::-webkit-scrollbar-track {
+    background-color: red; /* Color de fondo del track */
+  }
+}
+
+@media (hover: none) {
+  .scroll {
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(0,0,0,.2)
+    }
+  }
+}
