feat(Admin): show notification when a message is received (#60)
* feat(Admin): added edit UserProfile

* feat: WebSocket client configuration

* feat(Admin): show notification when a message is received

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,10 +73,10 @@ body {
 }
 
 .scroll {
-  width: 240px;
-  height: 200px;
+  /* width: 240px;
+  height: 200px; */
   overflow-y: scroll;
-  background-color: #f6f6f6;
+  /* background-color: #f6f6f6; */
 
   &::-webkit-scrollbar {
     background-color: transparent;
