--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,7 +80,7 @@ body {
 
   &::-webkit-scrollbar {
     background-color: transparent;
-    width: 0px;
+    width: 8px;
   }
 }
 
@@ -89,14 +89,16 @@ body {
     width: 8px;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: #111827;
+    /* background-color: #111827; */
+    background-color: #606577;
   }
   &::-webkit-scrollbar-track {
-    background-color: red; /* Color de fondo del track */
+    /* background-color: red;*/
+    background-color: transparent;
   }
 }
 
-@media (hover: none) {
+/* @media (hover: none) {
   .scroll {
     &::-webkit-scrollbar {
       width: 8px;
@@ -105,7 +107,7 @@ body {
       background-color: rgba(0, 0, 0, 0.2);
     }
   }
-}
+} */
 
 .loader {
   width: 40px;
